# PLONK

./: .gitmodules  Cargo.toml  README.md  build.rs
src/: ast.rs  ast_to_plonk.rs  execution_trace.rs  execution_trace_polynomial.rs  grand_product.rs  lib.rs  main.rs  offset_table.rs  permutation_polynomial.rs  plonk_circuit.rs  polynomial_builder.rs  polynomial_constraints_direct.rs  polynomial_constraints_fft.rs  polynomial_utils.rs  position_cell.rs  union_find.rs
src/kzg/: group_projectable.rs  mod.rs  prover.rs  verifier.rs
src/language_frontend/: ast.rs  evaluator.rs  lexer.rs  mod.rs  parser.lalrpop  parser.rs  test_utils.rs  type_checker.rs
