[package]
name = "plonk"
version = "0.1.0"
edition = "2021"
exclude = [
    ".history/"
]

[dependencies]
ark-bn254 = "0.4"
ark-std = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-poly = "0.4.0"
ark-sponge = "0.3.0"
ark-serialize = "0.4"
arkworks-utils = "1.0.1"

logos = "0.12.0"
lalrpop-util = "0.22"

rand = "0.8.5"


[build-dependencies]
lalrpop = "0.22"